--- a/src/DeCloud.NodeAgent/appsettings.json
+++ b/src/DeCloud.NodeAgent/appsettings.json
@@ -41,7 +41,7 @@
     "PollInterval": "00:00:05"
   },
   "Orchestrator": {
-    "BaseUrl": "https://api.decloud.network",
+    "BaseUrl": "http://142.234.200.108:5000",
     "ApiKey": "",
     "Timeout": "00:00:30"
   }
