--- a/src/DeCloud.NodeAgent/appsettings.json
+++ b/src/DeCloud.NodeAgent/appsettings.json
@@ -35,13 +35,13 @@
   },
   "Heartbeat": {
     "Interval": "00:00:15",
-    "OrchestratorUrl": "https://api.decloud.network"
+    "OrchestratorUrl": "http://142.234.200.108:5050"
   },
   "CommandProcessor": {
     "PollInterval": "00:00:05"
   },
   "Orchestrator": {
-    "BaseUrl": "http://142.234.200.108:5000",
+    "BaseUrl": "http://142.234.200.108:5050",
     "ApiKey": "",
     "Timeout": "00:00:30"
   }
