--- a/src/DeCloud.NodeAgent.Core/DeCloud.NodeAgent.Core.csproj
+++ b/src/DeCloud.NodeAgent.Core/DeCloud.NodeAgent.Core.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>DeCloud.NodeAgent.Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SSH.NET" Version="2025.1.0" />
+  </ItemGroup>
+
 </Project>
