--- a/src/DeCloud.NodeAgent.Core/DeCloud.NodeAgent.Core.csproj
+++ b/src/DeCloud.NodeAgent.Core/DeCloud.NodeAgent.Core.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0" />
     <PackageReference Include="SSH.NET" Version="2025.1.0" />
   </ItemGroup>
 
