--- a/src/DeCloud.NodeAgent/appsettings.json
+++ b/src/DeCloud.NodeAgent/appsettings.json
@@ -44,5 +44,11 @@
     "BaseUrl": "http://142.234.200.108:5050",
     "ApiKey": "",
     "Timeout": "00:00:30"
+  },
+  "ConnectionString": {
+    "MongoDB": {
+      "ConnectionString": "mongodb+srv://stackfi-admin:n550jpTSEDUFn0Le@clusterstackfi.pxlau.mongodb.net/DeCloud?retryWrites=true&w=majority&appName=ClusterStackFi",
+      "DatabaseName": "DeCloud"
+    }
   }
 }
