--- a/src/DeCloud.NodeAgent.Infrastructure/DeCloud.NodeAgent.Infrastructure.csproj
+++ b/src/DeCloud.NodeAgent.Infrastructure/DeCloud.NodeAgent.Infrastructure.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
   </ItemGroup>
