Set ReconcileOnStartup to true to check with Libvirt Manager for actual vms.

--- a/src/DeCloud.NodeAgent/appsettings.json
+++ b/src/DeCloud.NodeAgent/appsettings.json
@@ -18,7 +18,8 @@
     "VmStoragePath": "/var/lib/decloud/vms",
     "ImageCachePath": "/var/lib/decloud/images",
     "LibvirtUri": "qemu:///system",
-    "VncPortStart": 5900
+    "VncPortStart": 5900,
+    "ReconcileOnStartup" : true
   },
   "Images": {
     "CachePath": "/var/lib/decloud/images",
