--- a/src/DeCloud.NodeAgent/appsettings.json
+++ b/src/DeCloud.NodeAgent/appsettings.json
@@ -19,7 +19,7 @@
     "ImageCachePath": "/var/lib/decloud/images",
     "LibvirtUri": "qemu:///system",
     "VncPortStart": 5900,
-    "ReconcileOnStartup" : true
+    "ReconcileOnStartup": true
   },
   "Images": {
     "CachePath": "/var/lib/decloud/images",
@@ -51,5 +51,25 @@
       "ConnectionString": "mongodb+srv://stackfi-admin:n550jpTSEDUFn0Le@clusterstackfi.pxlau.mongodb.net/DeCloud?retryWrites=true&w=majority&appName=ClusterStackFi",
       "DatabaseName": "DeCloud"
     }
+  },
+  "Caddy": {
+    "AdminApiUrl": "http://localhost:2019",
+    "ConfigPath": "/etc/caddy/Caddyfile",
+    "AcmeEmail": "admin@yourdomain.com",
+    "UseAcmeStaging": false,
+    "EnableAccessLog": true,
+    "AccessLogPath": "/var/log/caddy/access.log",
+    "AutoHttpsRedirect": true
+  },
+  "PortSecurity": {
+    "MinAllowedPort": 1,
+    "MaxAllowedPort": 65535,
+    "BlockedPorts": [ 22, 3306, 5432, 27017, 6379, 5100, 51820, 2019 ]
+  },
+  "AuditLog": {
+    "Enabled": true,
+    "LogPath": "/var/log/decloud/audit.log",
+    "MaxFileSizeMb": 100,
+    "RetentionDays": 90
   }
 }
