--- a/src/DeCloud.NodeAgent/appsettings.json
+++ b/src/DeCloud.NodeAgent/appsettings.json
@@ -55,8 +55,9 @@
   "Caddy": {
     "AdminApiUrl": "http://localhost:2019",
     "ConfigPath": "/etc/caddy/Caddyfile",
-    "AcmeEmail": "admin@yourdomain.com",
+    "AcmeEmail": "",
     "UseAcmeStaging": false,
+    "DataDir": "/var/lib/caddy",
     "EnableAccessLog": true,
     "AccessLogPath": "/var/log/caddy/access.log",
     "AutoHttpsRedirect": true
@@ -64,12 +65,13 @@
   "PortSecurity": {
     "MinAllowedPort": 1,
     "MaxAllowedPort": 65535,
-    "BlockedPorts": [ 22, 3306, 5432, 27017, 6379, 5100, 51820, 2019 ]
+    "BlockedPorts": [ 22, 2222, 3306, 5432, 27017, 6379, 9200, 5100, 51820, 2019, 16509 ]
   },
   "AuditLog": {
     "Enabled": true,
     "LogPath": "/var/log/decloud/audit.log",
     "MaxFileSizeMb": 100,
+    "MaxFiles": 10,
     "RetentionDays": 90
   }
 }
