--- a/src/DeCloud.NodeAgent/DeCloud.NodeAgent.csproj
+++ b/src/DeCloud.NodeAgent/DeCloud.NodeAgent.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+<ItemGroup>
+  <Compile Include="../Shared/NodeIdGenerator.cs" Link="Shared/NodeIdGenerator.cs" />
+</ItemGroup>
+
 </Project>
