--- a/src/DeCloud.NodeAgent/appsettings.json
+++ b/src/DeCloud.NodeAgent/appsettings.json
@@ -17,7 +17,7 @@
   "Libvirt": {
     "VmStoragePath": "/var/lib/decloud/vms",
     "ImageCachePath": "/var/lib/decloud/images",
-    "LibvirtUri": "qemu:///system",
+    "Uri": "qemu:///system",
     "VncPortStart": 5900,
     "ReconcileOnStartup": true
   },
@@ -41,9 +41,9 @@
   "CommandProcessor": {
     "PollInterval": "00:00:05"
   },
-  "Orchestrator": {
+  "OrchestratorClient": {
     "BaseUrl": "http://142.234.200.108:5050",
-    "ApiKey": "",
+    "WalletAddress": "0x0000000000000000000000000000000000000000",
     "Timeout": "00:00:30"
   },
   "ConnectionString": {
