--- a/src/DeCloud.NodeAgent/DeCloud.NodeAgent.csproj
+++ b/src/DeCloud.NodeAgent/DeCloud.NodeAgent.csproj
@@ -18,8 +18,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
-<ItemGroup>
-  <Compile Include="../Shared/NodeIdGenerator.cs" Link="Shared/NodeIdGenerator.cs" />
-</ItemGroup>
+	<ItemGroup>
+		<Compile Include="../Shared/**/*.cs" Link="Shared/%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
 
 </Project>
