--- a/src/DeCloud.NodeAgent/CloudInit/Templates/general-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/general-vm-cloudinit.yaml
@@ -162,10 +162,10 @@ runcmd:
   # Start welcome page service
   - systemctl daemon-reload
   - systemctl enable --now welcome
+__PASSWORD_SSH_COMMANDS_BLOCK__
   
   # Restart SSH to apply CA configuration
   - systemctl restart sshd || systemctl restart ssh
 
-# __PASSWORD_SSH_COMMANDS_BLOCK__
 
 final_message: "DeCloud VM __VM_NAME__ is ready!"
