--- a/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
@@ -1014,6 +1014,77 @@ runcmd:
     
   - chmod +x /usr/local/bin/notify-orchestrator.sh
   - /usr/local/bin/notify-orchestrator.sh &
+
+  # Notify node agent that relay VM is ready for NAT configuration
+  - |
+    cat > /usr/local/bin/notify-nat-ready.sh <<'EOF'
+    #!/bin/bash
+    NODE_AGENT_URL="http://10.0.2.2:5100"  # Host IP from guest perspective
+    VM_ID="__VM_ID__"
+    
+    # Wait for network to be fully up and obtain IP
+    echo "Waiting for IP address..."
+    for i in {1..30}; do
+      VM_IP=$(ip -4 addr show eth0 | grep -oP '(?<=inet\s)\d+(\.\d+){3}' | head -1)
+      if [ -n "$VM_IP" ]; then
+        echo "✓ Obtained IP address: $VM_IP"
+        break
+      fi
+      sleep 2
+    done
+    
+    if [ -z "$VM_IP" ]; then
+      echo "❌ Failed to obtain IP address after 60 seconds"
+      exit 1
+    fi
+    
+    # Get machine ID for authentication
+    if [ -f "/etc/machine-id" ]; then
+      MACHINE_ID=$(cat /etc/machine-id | tr -d '\n')
+    else
+      MACHINE_ID=$(hostname)
+    fi
+    
+    # Compute callback token using HMAC-SHA256
+    MESSAGE="${VM_ID}:${VM_IP}"
+    TOKEN=$(echo -n "$MESSAGE" | openssl dgst -sha256 -hmac "$MACHINE_ID" -binary | base64)
+    
+    echo "Notifying node agent at $NODE_AGENT_URL..."
+    
+    # Call node agent NAT callback endpoint
+    RESPONSE=$(curl -X POST "$NODE_AGENT_URL/api/relay/nat-ready" \
+      -H "Content-Type: application/json" \
+      -H "X-Relay-Token: $TOKEN" \
+      -d "{
+        \"vmId\": \"$VM_ID\",
+        \"vmIp\": \"$VM_IP\"
+      }" \
+      --max-time 10 \
+      --retry 3 \
+      --retry-delay 5 \
+      -w "\nHTTP_CODE:%{http_code}" \
+      2>&1)
+    
+    HTTP_CODE=$(echo "$RESPONSE" | grep -oP 'HTTP_CODE:\K\d+')
+    
+    if [ "$HTTP_CODE" = "200" ]; then
+      echo "✓ Successfully notified node agent - NAT rule configured!"
+      echo "✓ CGNAT nodes can now connect to this relay"
+      logger -t decloud-relay "NAT rule configured successfully for $VM_IP"
+    else
+      echo "⚠ Failed to notify node agent (HTTP $HTTP_CODE)"
+      echo "Response: $RESPONSE"
+      logger -t decloud-relay "Failed to configure NAT rule - manual intervention required"
+    fi
+    EOF
+    
+  - chmod +x /usr/local/bin/notify-nat-ready.sh
+  
+  # Run notification script in background (non-blocking)
+  - /usr/local/bin/notify-nat-ready.sh >> /var/log/decloud-nat-callback.log 2>&1 &
+  
+  # Log the callback attempt
+  - 'echo "NAT callback notification scheduled at $(date)" >> /var/log/decloud-relay-bootstrap.log'
   
   # Verify orchestrator peer is configured
   - wg show wg-relay-server | grep -A 5 "__ORCHESTRATOR_PUBLIC_KEY__" || echo "WARNING - Orchestrator peer not found!"
