--- a/src/DeCloud.NodeAgent.Infrastructure/DeCloud.NodeAgent.Infrastructure.csproj
+++ b/src/DeCloud.NodeAgent.Infrastructure/DeCloud.NodeAgent.Infrastructure.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
+    <PackageReference Include="Nethereum.Signer" Version="5.0.0" />
   </ItemGroup>
 	<ItemGroup>
 		<Compile Include="../Shared/**/*.cs" Link="Shared/%(RecursiveDir)%(Filename)%(Extension)" />
