--- a/src/DeCloud.NodeAgent/appsettings.json
+++ b/src/DeCloud.NodeAgent/appsettings.json
@@ -43,7 +43,8 @@
   "OrchestratorClient": {
     "BaseUrl": "http://142.234.200.108:5050",
     "WalletAddress": "0x0000000000000000000000000000000000000000",
-    "Timeout": "00:00:30"
+    "Timeout": "00:00:30",
+    "PendingAuthFile": "/etc/decloud/pending-auth"
   },
   "ConnectionString": {
     "MongoDB": {
