--- a/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
@@ -163,13 +163,20 @@ runcmd:
   - echo "net.ipv6.conf.all.forwarding=1" >> /etc/sysctl.conf
   - sysctl -p
   
-  # Configure firewall (UFW)
+  # Configure firewall (UFW) for relay functionality  
   - ufw default deny incoming
   - ufw default allow outgoing
+  - ufw default allow routed  # CRITICAL: Allow forwarded traffic
   - ufw allow 22/tcp comment "SSH"
   - ufw allow 51820/udp comment "WireGuard"
   - ufw allow 80/tcp comment "HTTP Proxy"
   - ufw allow 8080/tcp comment "Relay API"
+  
+  # Allow forwarding on WireGuard interface (must be before enable)
+  - ufw route allow in on wg-relay-server
+  - ufw route allow out on wg-relay-server
+  
+  # Enable UFW
   - ufw --force enable
   
   # Enable and start QEMU guest agent
@@ -182,6 +189,18 @@ runcmd:
 
   # Verify orchestrator peer is configured
   - wg show wg-relay-server | grep -A 5 "__ORCHESTRATOR_PUBLIC_KEY__" || echo "WARNING - Orchestrator peer not found!"
+
+  # Configure routes for CGNAT node subnets through WireGuard
+  - |
+    echo "Configuring routes for CGNAT nodes..."
+    # Add route for entire relay network through WireGuard interface
+    ip route add 10.20.0.0/16 dev wg-relay-server 2>/dev/null || echo "Route already exists"
+    
+    # Make route persistent (if using netplan)
+    mkdir -p /etc/network
+    echo "10.20.0.0/16 dev wg-relay-server scope link" >> /etc/network/routes 2>/dev/null || true
+    
+    echo "Routes configured successfully"
 
   # Wait for WireGuard to be fully up
   - |
