--- a/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
@@ -72,30 +72,77 @@ write_files:
   - path: /etc/nginx/sites-available/relay-proxy
     permissions: '0644'
     content: |
+      # WebSocket upgrade header mapping
+      map $http_upgrade $connection_upgrade {
+          default upgrade;
+          '' close;
+      }
+
       # HTTP proxy for CGNAT node traffic
       server {
           listen 80 default_server;
           listen [::]:80 default_server;
-          
+    
           server_name _;
-          
+    
           # Health check
           location /health {
               return 200 "OK\n";
               add_header Content-Type text/plain;
           }
 
-          # Proxy to relay API (dashboard and management)
-          location / {
+          # Relay API dashboard (explicit path)
+          location /api/relay/ {
               proxy_pass http://127.0.0.1:8080;
               proxy_set_header Host $host;
               proxy_set_header X-Real-IP $remote_addr;
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               proxy_set_header X-Forwarded-Proto $scheme;
           }
-          
-          # Proxy to CGNAT nodes (added dynamically)
-          # Managed by relay API
+
+          # Dashboard root (only for relay dashboard hostname)
+          location = / {
+              # If accessing relay directly (not a VM subdomain), show dashboard
+              if ($host ~* "^[0-9.]+$|^relay-") {
+                  proxy_pass http://127.0.0.1:8080;
+                  break;
+              }
+        
+              # Otherwise, proxy to VM
+              proxy_pass http://127.0.0.1:8081;
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $scheme;
+        
+              # Long timeout for VM traffic
+              proxy_connect_timeout 30s;
+              proxy_send_timeout 90s;
+              proxy_read_timeout 90s;
+          }
+
+          # All wildcard subdomain traffic → HTTP Proxy Service
+          location / {
+              proxy_pass http://127.0.0.1:8081;
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $scheme;
+        
+              # Timeouts
+              proxy_connect_timeout 30s;
+              proxy_send_timeout 90s;
+              proxy_read_timeout 90s;
+        
+              # Buffering
+              proxy_buffering off;
+              proxy_request_buffering off;
+        
+              # WebSocket support
+              proxy_http_version 1.1;
+              proxy_set_header Upgrade $http_upgrade;
+              proxy_set_header Connection $connection_upgrade;
+          }
       }
 
   # Relay management API
@@ -113,6 +160,26 @@ write_files:
       Restart=always
       RestartSec=10
       
+      [Install]
+      WantedBy=multi-user.target
+
+  # HTTP Proxy Service
+  - path: /etc/systemd/system/decloud-relay-http-proxy.service
+    permissions: '0644'
+    content: |
+      [Unit]
+      Description=DeCloud Relay HTTP Proxy
+      After=network.target wg-quick@wg-relay-server.service decloud-relay-api.service
+      Wants=wg-quick@wg-relay-server.service
+
+      [Service]
+      Type=simple
+      Environment="ORCHESTRATOR_URL=http://10.20.0.1:5000"
+      Environment="RELAY_ID=__VM_ID__"
+      ExecStart=/usr/bin/python3 /opt/decloud-relay/http-proxy.py
+      Restart=always
+      RestartSec=10
+
       [Install]
       WantedBy=multi-user.target
 
@@ -137,6 +204,12 @@ write_files:
     permissions: '0755'
     content: |
       __RELAY_API__
+
+  # HTTP Proxy Script (loaded from external template)
+  - path: /opt/decloud-relay/http-proxy.py
+    permissions: '0755'
+    content: |
+      __RELAY_HTTP_PROXY__
 
   # DeCloud relay metadata
   - path: /etc/decloud/relay-info.json
@@ -356,6 +429,16 @@ runcmd:
   - nginx -t
   - systemctl enable nginx
   - systemctl restart nginx
+
+  # Start relay HTTP proxy
+  - systemctl enable decloud-relay-http-proxy
+  - systemctl start decloud-relay-http-proxy
+
+  # Wait for service to start
+  - sleep 2
+
+  # Verify HTTP proxy is running
+  - systemctl is-active decloud-relay-http-proxy || echo "WARNING - HTTP proxy failed to start"
   
   # Start relay management API
   - systemctl daemon-reload
