--- a/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/relay-vm-cloudinit.yaml
@@ -91,6 +91,19 @@ write_files:
               add_header Content-Type text/plain;
           }
 
+          # Static files (dashboard CSS/JS) → Relay API
+          location /static/ {
+              proxy_pass http://127.0.0.1:8080;
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $scheme;
+        
+              # Cache static files
+              proxy_cache_valid 200 1h;
+              add_header Cache-Control "public, max-age=3600";
+          }
+
           # Relay API dashboard (explicit path)
           location /api/relay/ {
               proxy_pass http://127.0.0.1:8080;
